SERVER-45699 - Set LogicalClock on Stitch support library ServiceContext