src/mongo/embedded/stitch_support/stitch_support.cpp
@@ -37,6 +37,7 @@
 #include "mongo/db/client.h"
 #include "mongo/db/exec/projection_executor.h"
 #include "mongo/db/exec/projection_executor_builder.h"
+#include "mongo/db/logical_clock.h"
 #include "mongo/db/matcher/matcher.h"
 #include "mongo/db/ops/parsed_update.h"
 #include "mongo/db/query/collation/collator_factory_interface.h"
@@ -123,8 +124,11 @@ ServiceContext* initialize() {
         mongo::runGlobalInitializers(0 /* argc */, nullptr /* argv */, nullptr /* envp */);
     uassertStatusOKWithContext(status, "Global initialization failed");
     setGlobalServiceContext(ServiceContext::make());
+    auto serviceContext = getGlobalServiceContext();
+    auto logicalClock = std::make_unique<LogicalClock>(serviceContext);
+    LogicalClock::set(serviceContext, std::move(logicalClock));
 
-    return getGlobalServiceContext();
+    return serviceContext;
 }
 
 struct ServiceContextDestructor {
